--- a/src/tuscany/components/sharedRegion.css
+++ b/src/tuscany/components/sharedRegion.css
@@ -1,13 +1,13 @@
 .outer {
   position: relative;
-  height: 365px;
-  width: 500px;
+  height: 100%;
+  width: 100%;
 }
 .tileArea {
   position: relative;
-  width: 455px;
-  margin: 10px auto;
-  height: 300px;
+  margin-left: 12%;
+  height: 100%;
+  width: 100%;
 }
 .leftUpDown {
   position: absolute;
