--- a/client/src/tuscany/board.css
+++ b/client/src/tuscany/board.css
@@ -3,6 +3,7 @@
   background-color: #eee;
   text-align: start;
   font-size: 16px;
+  overflow: hidden;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
