--- a/client/src/tuscany/components/card.css
+++ b/client/src/tuscany/components/card.css
@@ -1,7 +1,5 @@
 .myCard {
   display: inline-block;
-  height: 60px;
-  width: 45px;
   border-radius: 4px;
   border: 2px solid #333;
   margin: 2px;
@@ -14,8 +12,8 @@
   margin: 10px auto;
 }
 .stacked {
-  margin-left: -34px;
+  margin-left: -5.5%;
 }
 .cardActive {
-  margin-bottom: 20px;
+  margin-bottom: 4%;
 }
